fixed aside bg images not showing up in local

--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ hr{
 aside .svg{
   /* border: 1px solid; */
   width: 100%;
-  background: url(/HelloDarkness/imgs/night_mode.svg);
+  background: url(imgs/night_mode.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position-y: 100%;
@@ -167,10 +167,10 @@ footer {
     content: "light";
   }
   aside .png{
-    background: url(/HelloDarkness/imgs/light_mode.png);
+    background: url(imgs/light_mode.png);
   }
   aside .svg{
-    background: url(/HelloDarkness/imgs/light_mode.png);
+    background: url(imgs/light_mode.png);
   }
   aside .svg, aside .png{
     background-size: contain;
